clean up utils and increase test coverage