@@ -1,7 +1,10 @@
 package com.taxonic.carml.util;
 
-import com.google.common.collect.ImmutableSet;
-import com.taxonic.carml.model.*;
+import com.taxonic.carml.model.FileSource;
+import com.taxonic.carml.model.NameableStream;
+import com.taxonic.carml.model.TermType;
+import com.taxonic.carml.model.TriplesMap;
+import com.taxonic.carml.model.XmlSource;
 import com.taxonic.carml.model.impl.CarmlFileSource;
 import com.taxonic.carml.model.impl.CarmlStream;
 import com.taxonic.carml.model.impl.CarmlTriplesMap;
@@ -23,62 +26,41 @@ import org.eclipse.rdf4j.model.IRI;
 import org.eclipse.rdf4j.model.Model;
 import org.eclipse.rdf4j.model.Resource;
 import org.eclipse.rdf4j.model.impl.LinkedHashModel;
-import org.eclipse.rdf4j.model.impl.SimpleValueFactory;
-import org.eclipse.rdf4j.rio.ParserConfig;
 import org.eclipse.rdf4j.rio.RDFFormat;
-import org.eclipse.rdf4j.rio.Rio;
-import org.eclipse.rdf4j.rio.helpers.BasicParserSettings;
-import org.eclipse.rdf4j.rio.helpers.ParseErrorLogger;
 
 public class RmlMappingLoader {
 
-  private RmlConstantShorthandExpander shorthandExpander;
+  private static final Function<Model, Set<Resource>> selectTriplesMaps =
+      model -> Set.copyOf(model.filter(null, Rdf.Rml.logicalSource, null)
+          .subjects());
 
-  public RmlMappingLoader(RmlConstantShorthandExpander shorthandExpander) {
+  public static RmlMappingLoader build() {
+    return new RmlMappingLoader(new RmlConstantShorthandExpander());
+  }
+
+  private final RmlConstantShorthandExpander shorthandExpander;
+
+  private RmlMappingLoader(RmlConstantShorthandExpander shorthandExpander) {
     this.shorthandExpander = shorthandExpander;
-  }
-
-  /**
-   * @deprecated use {@link #load(RDFFormat, String...)} instead.
-   */
-  @Deprecated
-  public Set<TriplesMap> load(String resource, RDFFormat rdfFormat) {
-    return load(rdfFormat, resource);
-  }
-
-  /**
-   * @deprecated use {@link #load(RDFFormat, Path...)} instead.
-   */
-  @Deprecated
-  public Set<TriplesMap> load(Path pathToFile, RDFFormat rdfFormat) {
-    return load(rdfFormat, pathToFile);
-  }
-
-  /**
-   * @deprecated use {@link #load(RDFFormat, InputStream...)} instead.
-   */
-  @Deprecated
-  public Set<TriplesMap> load(InputStream input, RDFFormat rdfFormat) {
-    return load(rdfFormat, input);
   }
 
   public Set<TriplesMap> load(RDFFormat rdfFormat, String... classPathResources) {
     InputStream[] inputs = Arrays.stream(classPathResources)
-        .map(r -> RmlMappingLoader.class.getClassLoader()
-            .getResourceAsStream(r))
+        .map(RmlMappingLoader.class.getClassLoader()::getResourceAsStream)
         .toArray(InputStream[]::new);
 
     return load(rdfFormat, inputs);
   }
 
   public Set<TriplesMap> load(RDFFormat rdfFormat, Path... pathsToFile) {
-    InputStream[] inputs = Arrays.stream(pathsToFile) //
-        .map(p -> {
+    InputStream[] inputs = Arrays.stream(pathsToFile)
+        .map(path -> {
           InputStream input;
           try {
-            input = Files.newInputStream(p);
-          } catch (IOException e) {
-            throw new RuntimeException(e);
+            input = Files.newInputStream(path);
+          } catch (IOException ioException) {
+            throw new RmlMappingLoaderException(String.format("Exception while load mapping from path %s", path),
+                ioException);
           }
           return input;
         })
@@ -88,51 +70,34 @@ public class RmlMappingLoader {
   }
 
   public Set<TriplesMap> load(RDFFormat rdfFormat, InputStream... inputs) {
-    Model[] models = Arrays.stream(inputs) //
-        .map(i -> parse(i, rdfFormat)) //
+    Model[] models = Arrays.stream(inputs)
+        .map(inputStream -> Models.parse(inputStream, rdfFormat))
         .toArray(Model[]::new);
 
     return load(models);
   }
 
-  private Model parse(InputStream inputStream, RDFFormat format) {
-    try (InputStream is = inputStream) {
-      ParserConfig settings = new ParserConfig();
-      settings.set(BasicParserSettings.PRESERVE_BNODE_IDS, true);
-      return Rio.parse(is, "http://none.com/", format, settings, SimpleValueFactory.getInstance(),
-          new ParseErrorLogger());
-    } catch (IOException e) {
-      throw new RuntimeException("failed to parse input stream [" + inputStream + "] as [" + format + "]", e);
-    }
-  }
-
   public Set<TriplesMap> load(Model... models) {
-    Model model = Arrays.stream(models) //
-        .flatMap(Collection::stream) //
+    Model model = Arrays.stream(models)
+        .flatMap(Collection::stream)
         .collect(Collectors.toCollection(LinkedHashModel::new));
 
-    return ImmutableSet.copyOf( //
-        RdfObjectLoader.load( //
-            selectTriplesMaps, //
-            CarmlTriplesMap.class, //
-            model, //
-            shorthandExpander, //
-            this::addTermTypes, //
-            r -> { //
-              r.addDecidableType(Rdf.Carml.Stream, NameableStream.class);
-              r.addDecidableType(Rdf.Carml.XmlDocument, XmlSource.class);
-              r.addDecidableType(Rdf.Carml.FileSource, FileSource.class);
-              r.bindInterfaceImplementation(NameableStream.class, CarmlStream.class);
-              r.bindInterfaceImplementation(XmlSource.class, CarmlXmlSource.class);
-              r.bindInterfaceImplementation(FileSource.class, CarmlFileSource.class);
-            }, RmlNamespaces.RML_NAMESPACES));
+    return Set.copyOf(RdfObjectLoader.load(selectTriplesMaps, CarmlTriplesMap.class, model, shorthandExpander,
+        this::addTermTypes, mapper -> {
+          mapper.addDecidableType(Rdf.Carml.Stream, NameableStream.class);
+          mapper.addDecidableType(Rdf.Carml.XmlDocument, XmlSource.class);
+          mapper.addDecidableType(Rdf.Carml.FileSource, FileSource.class);
+          mapper.bindInterfaceImplementation(NameableStream.class, CarmlStream.class);
+          mapper.bindInterfaceImplementation(XmlSource.class, CarmlXmlSource.class);
+          mapper.bindInterfaceImplementation(FileSource.class, CarmlFileSource.class);
+        }, RmlNamespaces.RML_NAMESPACES));
   }
 
   private void addTermTypes(MappingCache cache) {
     class AddTermTypes {
 
       void add(IRI iri, TermType termType) {
-        cache.addCachedMapping(iri, ImmutableSet.of(TermType.class), termType);
+        cache.addCachedMapping(iri, Set.of(TermType.class), termType);
       }
 
       void run() {
@@ -141,14 +106,7 @@ public class RmlMappingLoader {
         add(Rr.Literal, TermType.LITERAL);
       }
     }
+
     new AddTermTypes().run();
   }
-
-  public static RmlMappingLoader build() {
-    return new RmlMappingLoader(new RmlConstantShorthandExpander());
-  }
-
-  private static Function<Model, Set<Resource>> selectTriplesMaps =
-      model -> ImmutableSet.copyOf(model.filter(null, Rdf.Rml.logicalSource, null)
-          .subjects());
 }
